--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  </div> 
  <div class="box-b"> 
  <img class="img-user" src="https://i.imgur.com/rncB9No.png" width="100/" /> 
- <h5>Days../h5> 
+ <h5>Days..
  <span>(1530612007)</span> 
  <p> Sell Gif Y Pcback
  </p>
