--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
  <div class="central"> 
  <h1>My <span style="color:#fff">xatspace</span> page?</h1> 
  <div class="-nav"> 
- <a href="http:xat.me/i=#">¦? ?</a> 
- <a href="href">¦? ? Mi Amor </a> 
+ <a href="http:xat.me/i=#">¦</a> 
+ <a href="href">¦Mi Amor </a> 
  </div> 
  <div class="-conteudo"> 
  <div class="img-princ"> 
