--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
  <div class="box-b"> 
  <img class="img-user" src="https://i.imgur.com/rncB9No.png" width="100/" /> 
  <h5>Days..
- <span>(1530612007)</span> 
- <p> Sell Gif Y Pcback
+ <span>Welcome.</span> 
+ <p>Sell Gif Y Pcback
  </p>
  </div> 
  </div> 
