--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  </div> 
  </div> 
  <div id="-footer"> 
- <span>(1530612007)<br />https://xat.com/trade
+ <span>(1530612007)<br />https://xat.com/Fondos
 </span> 
  </div> 
  </div> 
