--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  </div> 
  <div class="-conteudo"> 
  <div class="img-princ"> 
- <img src="https://i.imgur.com/pPtoWIN.gifv" width="334/" /> 
+ <img src="https://i.imgur.com/pPtoWIN.gif" width="334/" /> 
  </div> 
  <div class="box-a"> 
 <p> 
