--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </style> 
 <div id="NotAllowedme"> 
 <div id="-main"> 
- <div <iframe width="640" height="480" src="https://www.youtube.com/embed/x9U65tEwc8o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></ifram class="central"> 
- <h1>My <span style="color:#fff">xatspace</span> page?</h1> 
+ <div  
  <div class="-nav"> 
  <a href="http:xat.me/i=#">¦</a> 
  <a href="href">¦Mi Amor </a> 
