--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 </style> 
 <div id="NotAllowedme"> 
 <div id="-main"> 
- <div  
+ <div id="page-princ"> 
+ <a class="open-video" href="#page-video">Open video</a> 
+ <div class="central"> 
+ <h1>My <span style="color:#fff">xatspace</span> page?</h1> 
  <div class="-nav"> 
- <a href="http:xat.me/i=#">¦</a> 
- <a href="href">¦Mi Amor </a> 
+ <a href="http:xat.me/i=#">¦? ?</a> 
+ <a href="href">¦? ? Mi Amor </a> 
  </div> 
  <div class="-conteudo"> 
  <div class="img-princ"> 
